<resources>
    <string name="app_name">AndroidDemoApp</string>

    <string name="google_maps_credential">AIzaSyCVnsJgmt9ybD_p0FFXb1Ty123t9K9_nBk</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_line">Line</string>
    <string name="menu_rectangle">Rectangle</string>
    <string name="menu_triangle">Triangle</string>
    <string name="menu_squre">Square</string>
    <string name="menu_circle">Circle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="draw_line">Draw Line</string>
    <string name="draw_circle">Draw Circle</string>
    <string name="draw_square">Draw Square</string>
    <string name="draw_rectangle">Draw Rectangle</string>
    <string name="textview">TextView</string>
    <string name="menu_map">Map</string>
    <string name="enable_gps_message">Enable gps on your mobile phone</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="cancel">Cancel</string>
    <string name="menu_sensor">Sensor</string>
    <string name="title_activity_test">TestActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>


</resources>