<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_line"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_line" />

        <item
            android:id="@+id/nav_circle"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_circle" />

        <item
            android:id="@+id/nav_triangle"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_triangle" />

        <item
            android:id="@+id/nav_square"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_squre" />

        <item
            android:id="@+id/nav_rectangle"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_rectangle" />





    </group>
</menu>