<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_line">

    <fragment
        android:id="@+id/nav_line"
        android:name="com.example.androiddemoapp.views.fragment.LineFragment"
        android:label="@string/menu_line"
        tools:layout="@layout/fragment_line" />

    <fragment
        android:id="@+id/nav_rectangle"
        android:name="com.example.androiddemoapp.views.fragment.RectangleFragment"
        android:label="@string/menu_rectangle"
        tools:layout="@layout/fragment_rectangle" />

    <fragment
        android:id="@+id/nav_triangle"
        android:name="com.example.androiddemoapp.views.fragment.TriangleFragment"
        android:label="@string/menu_triangle"
        tools:layout="@layout/fragment_triangle" />

    <fragment
        android:id="@+id/nav_square"
        android:name="com.example.androiddemoapp.views.fragment.SquareFragment"
        android:label="@string/menu_squre"
        tools:layout="@layout/fragment_square" />

    <fragment
        android:id="@+id/nav_circle"
        android:name="com.example.androiddemoapp.views.fragment.CircleFragment"
        android:label="@string/menu_circle"
        tools:layout="@layout/fragment_circle" />
    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.androiddemoapp.views.fragment.MapFragment"
        android:label="fragment_map"
        tools:layout="@layout/fragment_map" />

</navigation>
